--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+<title>PAGE</title>
 </head>
-<body>
-
-<a href="https://www.youtube.com/results?search_query=mrbeast"> hoi </a> 
+<body><h1>HELLO TO MY PAGE</h1>
+  <H3>I am in a class</H3>
 
 </body>
 </html>
