--- a/index.html
+++ b/index.html
@@ -1,13 +1,87 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>PAGE</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Resume - Pranav R</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 20px;
+      background-color: #f4f4f4;
+    }
+    .container {
+      max-width: 800px;
+      margin: 0 auto;
+      padding: 20px;
+      background: #fff;
+      border-radius: 8px;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    }
+    h1, h2 {
+      color: #333;
+    }
+    .header, .section {
+      margin-bottom: 20px;
+    }
+    .section-title {
+      font-size: 1.2em;
+      font-weight: bold;
+      color: #555;
+      border-bottom: 2px solid #333;
+      padding-bottom: 5px;
+      margin-bottom: 10px;
+    }
+    .details {
+      line-height: 1.6;
+    }
+    ul {
+      list-style-type: none;
+      padding-left: 0;
+    }
+  </style>
 </head>
-<body><h1>HELLO TO MY PAGE</h1>
-  <H3>I am in a class</H3>
-  <h5>This class is boring</h5>
+<body>
+
+<div class="container">
+  <!-- Header -->
+  <div class="header">
+    <h1>Pranav R</h1>
+    <p>Phone: 9380571874 | Email: pranavramesh05@gmail.com</p>
+    <p>Date of Birth: 26/11/2005</p>
+  </div>
+
+  <!-- Skills -->
+  <div class="section">
+    <div class="section-title">Skills</div>
+    <ul>
+      <li>HTML</li>
+      <li>Programming in C</li>
+    </ul>
+  </div>
+
+  <!-- Qualifications -->
+  <div class="section">
+    <div class="section-title">Qualifications</div>
+    <ul>
+      <li>10th Grade: 85%</li>
+      <li>12th Grade: 90%</li>
+    </ul>
+  </div>
+
+  <!-- Hobbies -->
+  <div class="section">
+    <div class="section-title">Hobbies</div>
+    <ul>
+      <li>Cricket</li>
+      <li>Gaming</li>
+    </ul>
+  </div>
+</div>
 
 </body>
 </html>
+
 
 
