--- a/index1.html
+++ b/index1.html
@@ -9,36 +9,58 @@
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 20px;
-      background-color: #f4f4f4;
+      background-color: #eef2f3;
+      color: #333;
     }
     .container {
       max-width: 800px;
       margin: 0 auto;
-      padding: 20px;
+      padding: 30px;
       background: #fff;
-      border-radius: 8px;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+      border-radius: 10px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
     }
-    h1, h2 {
+    h1 {
+      font-size: 2em;
       color: #333;
+      margin-bottom: 5px;
     }
-    .header, .section {
-      margin-bottom: 20px;
+    .header p {
+      font-size: 1em;
+      color: #666;
+      margin: 2px 0;
     }
     .section-title {
-      font-size: 1.2em;
+      font-size: 1.5em;
       font-weight: bold;
       color: #555;
-      border-bottom: 2px solid #333;
-      padding-bottom: 5px;
-      margin-bottom: 10px;
+      border-left: 4px solid #333;
+      padding-left: 10px;
+      margin-bottom: 15px;
     }
-    .details {
-      line-height: 1.6;
+    .details, ul {
+      line-height: 1.8;
     }
     ul {
       list-style-type: none;
       padding-left: 0;
+    }
+    ul li {
+      background: #f7f7f7;
+      margin-bottom: 8px;
+      padding: 8px 12px;
+      border-radius: 5px;
+      font-size: 1em;
+    }
+    .about-me {
+      margin-bottom: 20px;
+      font-size: 1.1em;
+      line-height: 1.6;
+      color: #444;
+      padding: 10px 15px;
+      background-color: #f9f9f9;
+      border-left: 4px solid #555;
+      border-radius: 8px;
     }
   </style>
 </head>
@@ -48,16 +70,24 @@
   <!-- Header -->
   <div class="header">
     <h1>Pranav R</h1>
-    <p>Phone: 9380571874 | Email: pranavramesh05@gmail.com</p>
-    <p>Date of Birth: 26/11/2005</p>
+    <p>📞 Phone: 9380571874 | ✉️ Email: pranavramesh05@gmail.com</p>
+    <p>🎂 Date of Birth: 26/11/2005</p>
+  </div>
+
+  <!-- About Me -->
+  <div class="about-me">
+    <h2>About Me</h2>
+    <p>
+      Hi, I’m Pranav—a passionate learner with a knack for problem-solving. Whether I’m coding in C, designing web pages in HTML, or strategizing my next cricket game, I love diving into challenges and pushing myself. I aim to continually build my skills, and I’m excited about exploring tech and beyond. Looking forward to making an impact wherever I go!
+    </p>
   </div>
 
   <!-- Skills -->
   <div class="section">
     <div class="section-title">Skills</div>
     <ul>
-      <li>HTML</li>
-      <li>Programming in C</li>
+      <li>HTML - Proficient in web design fundamentals</li>
+      <li>Programming in C - Strong problem-solving skills in C language</li>
     </ul>
   </div>
 
@@ -65,8 +95,8 @@
   <div class="section">
     <div class="section-title">Qualifications</div>
     <ul>
-      <li>10th Grade: 85%</li>
-      <li>12th Grade: 90%</li>
+      <li>10th Grade: Scored 85%</li>
+      <li>12th Grade: Scored 90%</li>
     </ul>
   </div>
 
@@ -74,14 +104,11 @@
   <div class="section">
     <div class="section-title">Hobbies</div>
     <ul>
-      <li>Cricket</li>
-      <li>Gaming</li>
+      <li>Cricket - An all-rounder with a passion for sportsmanship</li>
+      <li>Gaming - Engaged in both strategy and adventure genres</li>
     </ul>
   </div>
 </div>
 
 </body>
 </html>
-
-
-
