--- a/index.html
+++ b/index.html
@@ -25,6 +25,18 @@
       color: #333;
       margin-bottom: 5px;
     }
+    .header {
+      display: flex;
+      align-items: center;
+      gap: 15px;
+    }
+    .header img {
+      width: 100px;
+      height: 100px;
+      border-radius: 50%;
+      object-fit: cover;
+      border: 2px solid #333;
+    }
     .header p {
       font-size: 1em;
       color: #666;
@@ -69,9 +81,12 @@
 <div class="container">
   <!-- Header -->
   <div class="header">
-    <h1>Pranav R</h1>
-    <p>📞 Phone: 9380571874 | ✉️ Email: pranavramesh05@gmail.com</p>
-    <p>🎂 Date of Birth: 26/11/2005</p>
+    <img src="https://github.com/pranavvvvv29/fullstack/blob/main/20240908_042046987_iOS.jpg?raw=true" alt="Pranav's Profile Picture">
+    <div>
+      <h1>Pranav R</h1>
+      <p>📞 Phone: 9380571874 | ✉️ Email: pranavramesh05@gmail.com</p>
+      <p>🎂 Date of Birth: 26/11/2005</p>
+    </div>
   </div>
 
   <!-- About Me -->
